--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fusion-dots",
+  "name": "fusion-dots-commerce",
   "description": "Catalyst is BigCommerce's composable front-end framework designed for building custom ecommerce storefronts.",
   "keywords": [
     "bigcommerce",
